state_encoding/yuan_alg/build/log.txt
g++ -std=c++11 -Wall -g -c ../src/Graph.cpp
../src/Graph.cpp: In member function ‘void Graph::write_to_dot()’:
../src/Graph.cpp:208:34: error: invalid conversion from ‘int’ to ‘const char*’ [-fpermissive]
   path.append(times_graph_printed);
                                  ^
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/istream:38,
                 from /usr/include/c++/4.8/fstream:38,
                 from ../src/Graph.cpp:2:
/usr/include/c++/4.8/bits/basic_string.h:1006:7: error:   initializing argument 1 of ‘std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::append(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’ [-fpermissive]
       append(const _CharT* __s)
       ^
make: *** [Graph.o] Error 1
